# portex

./: Cargo.toml  README.md  commit_msg.txt  mise.toml
.github/workflows/: ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_pe_headers.rs  fuzz_pe_parse.rs
src/: bound_import.rs  builder.rs  checksum.rs  clr.rs  coff.rs  data_dir.rs  debug.rs  delay_import.rs  dos.rs  error.rs  exception.rs  export.rs  import.rs  layout.rs  lib.rs  loadconfig.rs  optional.rs  pe.rs  reader.rs  reloc.rs  resource.rs  rich.rs  section.rs  security.rs  tls.rs  validation.rs
tests/: integration.rs
