[package]
name = "portex"
version = "0.1.0"
edition = "2024"
description = "A PE (Portable Executable) file reader/writer library"
license = "MIT"
repository = "https://github.com/coconutbird/portex"
readme = "README.md"
keywords = ["pe", "portable-executable", "windows", "exe", "dll"]
categories = ["parsing", "development-tools"]

[dependencies]

[lints.clippy]
all = { level = "warn", priority = -1 }
# Pedantic is too strict for existing codebase - enable incrementally if desired
# pedantic = { level = "warn", priority = -1 }
