[package]
name = "portex-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.portex]
path = ".."

[[bin]]
name = "fuzz_pe_parse"
path = "fuzz_targets/fuzz_pe_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pe_headers"
path = "fuzz_targets/fuzz_pe_headers.rs"
test = false
doc = false
bench = false

